--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         function renderAuditDetails(audit) {
             if (!audit) return '';
             const details = audit[5];
-            return `<table class="w-full"><tr><td>ID: ${audit[0]}</td><td>Started: ${new Date(audit[2] * 1000).toLocaleString()}</td><td>Finished: ${new Date(audit[3] * 1000).toLocaleString()}</td><td>Result: <span class="hacker-green">${audit[4]}</span></td></tr><tr><td>Model: ${audit[6]}</td><td colspan="3">Git Rev: ${audit[7]}</td></tr><tr><td colspan="4"><pre class="whitespace-pre-wrap">${details}</pre></td></tr></table>`;
+            return `<table class="w-full"><tr><td>ID: ${audit[0]}</td><td>Started: ${new Date(audit[2] * 1000).toLocaleString()}</td><td>Finished: ${new Date(audit[3] * 1000).toLocaleString()}</td><td>Result: <span class="hacker-green">${audit[4]}</span></td></tr><tr><td>Model: ${audit[6]}</td><td>Git Rev: ${audit[7]}</td><td colspan="2">Version: ${audit[8]}</td></tr><tr><td colspan="4"><pre class="whitespace-pre-wrap">${details}</pre></td></tr></table>`;
         }
 
         function toggleAudit(auditId) {
